<resources>
    <string name="app_name">UltimateGames</string>
    <string name="welcome">Welcome!</string>
    <string name="restartTicTacToe">Play again</string>
    <string name="playerOneWon">Player one WON!</string>
    <string name="playerTwoWon">Player two WON!</string>
    <string name="playerWon">Player WON!</string>
    <string name="computerWon">Computer WON!</string>
    <string name="draw">DRAW</string>
    <string name="welcomeTicTacToe">Welcome to Tic-Tac-Toe!</string>
    <string name="welcomeColorSelection">Welcome to sign and color selection!</string>
    <string name="score">Score: </string>
    <string name="select_game">Please select the game you want to play:</string>
    <string name="hangman_title">Hangman</string>
    <string name="move_number">Your moves: </string>
    <string name="label_enter_new_word">Enter a new Word:</string>
    <string name="label_max_characters">(max. 8 characters)</string>
    <string name="color_selection">Choose color:</string>
    <string name="sign_selection">Choose sign:</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_playhangman">Play Hangman</string>
    <string name="btn_enter_word">Enter a new word</string>
    <string name="btn_need_hint">Need a hint? (-3 Points)</string>
    <string name="title_activity_tic_tac_toe__welcome_screen">Tic-Tac-Toe</string>
    <string name="title_activity_tic_tac_toe_pvp">Tic-Tac-Toe PvP</string>
    <string name="title_activity_tic_tac_toe_pvc">Tic-Tac-Toe PvC</string>
    <string name="title_activity_touch_the_block">Touch The Block</string>
    <string name="title_activity_hangman_welcome_screen">Hangman</string>
    <string name="title_activity_color_selection">Sign and Color selection</string>
    <string name="hangman_wrong">Wrong guesses:</string>
    <string name="ttb_changeBlockColor">Change Color!</string>
    <string name="restartTTB">You do not have enough points to restart!</string>
    <string name="lostTTB">Sorry you lost! Press to try again</string>
    <string name="youLost">You lost!</string>
    <string name="err_enter_new_word">Please enter a word into the text field</string>
    <string name="word_new">New word</string>
    <string name="word_add">Add word</string>
    <string name="word_added">Word added.</string>
    <string name="err_word_exist">Word already exists.</string>
    <string name="word_remove">Remove word</string>
    <string name="word_removed">Word removed.</string>
    <string name="err_word_not_exist">Word doesn\'t exist.</string>
    <string name="you_win">You win!</string>
    <string name="you_lose">You lose!</string>
    <string name="ttt_restart">Would you like to restart the game?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="resetScore">Reset the score</string>
    <string name="blue_color">Blue</string>
    <string name="red_color">Red</string>
    <string name="black_color">Black</string>
    <string name="green_color">Green</string>
    <string name="purple_color">Blue</string>
    <string name="change_bg_color">Set Background</string>
    <string name="change_block_color">Set Block</string>
    <string name="same_color">You can not set same color for block and background</string>

</resources>
