<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.TicTacToe.TicTacToe_WelcomeScreen"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="900sp"
        android:layout_weight="65"
        android:orientation="vertical"
        android:paddingBottom="50sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcomeTicTacToe"
            android:textAlignment="center"
            android:textColor="#4265f4"
            android:textSize="30sp"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_game"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="24sp"
            android:padding="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15sp"
            android:text="@string/score"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10sp"
        android:layout_marginTop="20sp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:id="@+id/btn_tictactoePvP"
            android:text="Tic-Tac-Toe PvP"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:id="@+id/btn_tictactoePvC"
            android:text="Tic-Tac-Toe PvC"/>
    </LinearLayout>

</LinearLayout>