<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeScreenActivity"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:id="@+id/headerwelcomescreen"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="65"
            android:orientation="vertical"
            android:layout_marginTop="20sp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textColor="#4265f4"
                android:textSize="30sp"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:textAlignment="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/score"
                    android:textSize="20sp"
                    android:padding="5dp"/>

                <TextView
                    android:id="@+id/text_score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="20sp"
                    tools:text="@tools:sample/date/hhmm" />

            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_game"
                android:textAlignment="center"
                android:textColor="#000"
                android:textSize="24sp"
                android:padding="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gametitlewelcomescreen"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_weight="35"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:id="@+id/btn_tictactoe"
                android:text="Tic-Tac-Toe"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:id="@+id/btn_hangman"
                android:text="Hangman"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:layout_marginBottom="30dp"
                android:textAlignment="center"
                android:id="@+id/btn_block"
                android:text="Touch the Block"/>

        </LinearLayout>

    </LinearLayout>





    <TextView
        android:layout_alignParentBottom="true"
        android:id="@+id/btn_languagesetter"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="🇺🇸🇦🇹"
        android:textSize="20sp"
        android:layout_marginBottom="20sp"
        android:layout_marginLeft="20sp"/>

    <LinearLayout
        android:id="@+id/languagemenu"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="50dp"
        android:background="#fff">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:id="@+id/btn_englishlanguage"
            android:text="English"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:id="@+id/btn_germanlanguage"
            android:text="Deutsch"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp"
            android:layout_marginBottom="30dp"
            android:textAlignment="center"
            android:id="@+id/btn_languagecancel"
            android:text="cancel"/>

    </LinearLayout>

</RelativeLayout>